# mystream

./: .gitignore  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: config.toml
src/: client.py  tutorial_pb2.py  tutorial_pb2_grpc.py
